manifests/cyclonedx-1.0.6.tgz-manifest.yaml
---
# Source: cyclonedx/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "cyclonedx"
  labels:
    openshift.io/cluster-monitoring: "true"
    helm.sh/chart: cyclonedx-1.0.6
    app.kubernetes.io/name: cyclonedx
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
---
# Source: cyclonedx/templates/service.yaml
Create the Service: 
kind: Service
apiVersion: v1
metadata:
  name: cyclonedx-bom-repo-server
  namespace: "cyclonedx"
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http-listener
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: cyclonedx-bom-repo-server
---
# Source: cyclonedx/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cyclonedx-bom-repo-server
  namespace: "cyclonedx"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyclonedx-bom-repo-server
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cyclonedx-bom-repo-server
    spec:
      containers:
        - name: container
          image: cyclonedx/cyclonedx-bom-repo-server
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
# Source: cyclonedx/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cyclonedx-bom-repo-server
  namespace: "cyclonedx"
spec:
  to:
    kind: Service
    name: cyclonedx-bom-repo-server
    weight: 100
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
